--- a/application/admin/view/admin_foot.html
+++ b/application/admin/view/admin_foot.html
@@ -1,8 +1,8 @@
 </section>
 <script type="text/javascript" src="__JS__/js/jquery.min.js"></script> 
 <script type="text/javascript" src="__JS__/js/2.1/layer.js"></script> 
-<script type="text/javascript" src="__JS__/js//js/H-ui.js"></script> 
-<script type="text/javascript" src="__JS__/js//H-ui.admin.js"></script> 
+<script type="text/javascript" src="__JS__/js/H-ui.js"></script> 
+<script type="text/javascript" src="__JS__/js/H-ui.admin.js"></script> 
 <script type="text/javascript">
 /*资讯-添加*/
 function article_add(title,url){
