修改前台模板

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -82,13 +82,13 @@
 											</a>
 										</li>
 										<li class="icon">
-											<a href="">
+											<a href="{:url('index/classtype')}">
 												<span class="icon-circle"><img src="__IMG__/img/icon-tuan4.png"></span>
 												<span class="icon-desc">分类</span>
 											</a>
 										</li>
 										<li class="icon">
-											<a href="life.html">
+											<a href="{:url('index/life')}">
 												<span class="icon-circle"><img src="__IMG__/img/icon-tuan5.png"></span>
 												<span class="icon-desc">生活</span>
 											</a>
