--- a/application/index/view/index/received.html
+++ b/application/index/view/index/received.html
@@ -28,8 +28,8 @@
 <div class="aui-t-content">
 	<div class="aui-tab ">
 		<ul class="aui-b-border">
+			<li class=" aui-hit">待收货</li>
 			
-			<li class="">待收货</li>
 			
 		</ul>
 		<div class="aui-panes">
@@ -53,7 +53,13 @@
 									</p>
 								</div>
 							</li>
-							
+							<div class="aui-qux">
+								<p style="color:#888; font-size:12px" class="b-line">一共3件商品 共计:9000.00(包含运费10.00)</p>
+								<div>
+									
+									<a href="#">申请退款</a>
+								</div>
+							</div>
 						</ol>
 					</div>
 				</div>
