二次修改前台模板

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -128,20 +128,20 @@
 		<div class="aui-flex">
 			<div class="aui-flex-item aui-flex-items">
 		<span>
-			<a href="page.html"><img src="__IMG__/img/b1.jpg"></a>
+			<a href="{:url('index/joinShopping')}"><img src="__IMG__/img/b1.jpg"></a>
 		</span>
 				<a href="#" class="aui-flex-box">新款上市</a>
 			</div>
 			<div class="aui-flex-item aui-flex-items">
 		<span>
-			<a href="page.html"><img src="__IMG__/img/b2.jpg"></a>
+			<a href="{:url('index/joinShopping')}"><img src="__IMG__/img/b2.jpg"></a>
 		</span>
 				<a href="#" class="aui-flex-box">爱美装扮</a>
 
 			</div>
 			<div class="aui-flex-item aui-flex-items">
 		<span>
-			<a href="page.html"><img src="__IMG__/img/b3.jpg"></a>
+			<a href="{:url('index/joinShopping')}"><img src="__IMG__/img/b3.jpg"></a>
 		</span>
 				<a href="#" class="aui-flex-box">热潮时代</a>
 			</div>
