--- a/application/index/view/foot.html
+++ b/application/index/view/foot.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="__JS__/js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="__JS__/js/aui-touchSlide.js"></script>
+<script type="text/javascript" src="__INDEX__/js/pd/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="__INDEX__/js/pd/aui-touchSlide.js"></script>
 <script>
 	/*banner首页轮播*/
 	TouchSlide({
@@ -14,9 +14,9 @@
 		switchLoad : "_src" // 切换加载，真实图片路径为"_src"
 	});
 </script>
-<script src="__JS__/js/aui-scroll.js" type="text/javascript" charset="utf-8"></script>
-<script src="__JS__/js/aui-index.js" type="text/javascript" charset="utf-8"></script>
-<script src="__JS__/js/aui-swipe.js" type="text/javascript" charset="utf-8"></script>
+<script src="__INDEX__/js/ba/aui-scroll.js" type="text/javascript" charset="utf-8"></script>
+<script src="__INDEX__/js/ba/aui-index.js" type="text/javascript" charset="utf-8"></script>
+<script src="__INDEX__/js/ba/aui-swipe.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
