--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -17,22 +17,22 @@
 		<div style="height:50px"></div>
 		<!-- 头部 End-->
 		<!-- 首页轮播 begin -->
-		<div class="aui-banner-content">
+	<div class="aui-banner-content">
 			<div id="focus" class="focus">
 				<div class="bd">
 					<div class="tempWrap" style="overflow:hidden; position:relative;">
 						<ul id="Gallery" class="gallery" style="width: 2250px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-1125px, 0px) translateZ(0px);">
 							<li style="display: table-cell; vertical-align: top; width: 375px;" >
-								<a href=""><img src="__IMG__/img/banner1.jpg"></a>
+								<a href="#"><img src="__INDEX__/js/pd/img/banner1.jpg"></a>
 							</li>
 							<li style="display: table-cell; vertical-align: top; width: 375px;">
-								<a href=""><img src="__IMG__/img/banner2.jpg"></a>
+								<a href="#"><img src="__INDEX__/js/pd/img/banner2.jpg"></a>
 							</li>
 							<li style="display: table-cell; vertical-align: top; width: 375px;" >
-								<a href=""><img src="__IMG__/img/banner1.jpg"></a>
+								<a href="#"><img src="__INDEX__/js/pd/img/banner1.jpg"></a>
 							</li>
 							<li style="display: table-cell; vertical-align: top; width: 375px;">
-								<a href=""><img src="__IMG__/img/banner2.jpg"></a>
+								<a href="#"><img src="__INDEX__/js/pd/img/banner2.jpg"></a>
 							</li>
 						</ul>
 					</div>
@@ -57,51 +57,51 @@
 							<div class="swiper-wrapper tuangouwidth" style="transition-duration: 0ms; transform: translate3d( 0px, 0px);">
 								<div class="swiper-slide swiper-slide-duplicate " >
 									<ul class="icon-list">
-										<li class="icon">
-											<a href="">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan.png"></span>
+									<li class="icon">
+											<a href="bag.html">
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan.png"></span>
 												<span class="icon-desc">红包</span>
 											</a>
 										</li>
 										<li class="icon">
-											<a href="">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan1.png"></span>
+											<a href="#">
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan1.png"></span>
 												<span class="icon-desc">签到</span>
 											</a>
 										</li>
 										<li class="icon">
-											<a href="">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan2.png"></span>
+											<a href="new-pd.html">
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan2.png"></span>
 												<span class="icon-desc">新品</span>
 											</a>
 										</li>
 										<li class="icon">
-											<a href="">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan3.png"></span>
+											<a href="#">
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan3.png"></span>
 												<span class="icon-desc">团购</span>
 											</a>
 										</li>
 										<li class="icon">
 											<a href="{:url('index/classtype')}">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan4.png"></span>
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan4.png"></span>
 												<span class="icon-desc">分类</span>
 											</a>
 										</li>
 										<li class="icon">
 											<a href="{:url('index/life')}">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan5.png"></span>
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan5.png"></span>
 												<span class="icon-desc">生活</span>
 											</a>
 										</li>
 										<li class="icon">
 											<a href="#">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan6.png"></span>
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan6.png"></span>
 												<span class="icon-desc">秀秀</span>
 											</a>
 										</li>
 										<li class="icon">
 											<a href="#">
-												<span class="icon-circle"><img src="__IMG__/img/icon-tuan7.png"></span>
+												<span class="icon-circle"><img src="__INDEX__/js/ba/img/icon-tuan7.png"></span>
 												<span class="icon-desc">达人</span>
 											</a>
 										</li>
@@ -120,7 +120,7 @@
 				<span style="font-size:14px; padding-left:5px">APP新版本上线换一种方式购物</span>
 			</a>
 		</div>
-		<div class="my-car-thumbnail"><img src="__IMG__/img/banner-car.jpg"></div>
+		<div class="my-car-thumbnail"><img src="__INDEX__/images/img/b1.jpg"></a></div>
 
 		<div class="aui-title-h">
 			<h2>大牌热卖</h2>
@@ -128,7 +128,7 @@
 		<div class="aui-flex">
 			<div class="aui-flex-item aui-flex-items">
 		<span>
-			<a href="{:url('index/joinShopping')}"><img src="__IMG__/img/b1.jpg"></a>
+			<a href="{:url('index/joinShopping')}"><img src="__INDEX__/images/img/b2.jpg"></a>
 		</span>
 				<a href="#" class="aui-flex-box">新款上市</a>
 			</div>
