--- a/application/index/view/login/forgetPassword.html
+++ b/application/index/view/login/forgetPassword.html
@@ -37,7 +37,7 @@
 		<a href="{:url('index/Submission')}">提交</a>
 	</div>
 	<div class="aui-login-wen">
-		<div class="aui-login-wen-a"><a href="{:url('index/register')}">注册</a> </div>
+		<div class="aui-login-wen-a"><a href="{:url('login/register')}">注册</a> </div>
 		
 	</div>
 	<div class="aui-login-san">
