--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>新秀购物</title>
-	<link rel="stylesheet" type="text/css" href="__CSS__/css/ui.css">
-	<link href="__IMG__/img/favicon.ico" type="image/x-icon" rel="icon">
-	<link href="__IMG__/img/iTunesArtwork@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
+	<title>歪秀购物</title>
+	<link rel="stylesheet" type="text/css" href="__INDEX__/css/ui.css">
+	<link href="favicon.ico" type="image/x-icon" rel="icon">
+	<link href="iTunesArtwork@2x.png" sizes="114x114" rel="apple-touch-icon-precomposed">
 </head>
 <body>
